fix(admin): Overflow candidate info fixed

--- a/src/views/admin/pages/ManageCandidates/ManageCandidates.module.scss
+++ b/src/views/admin/pages/ManageCandidates/ManageCandidates.module.scss
@@ -33,7 +33,7 @@
   background: white;
   border: 1px solid #e5e7eb;
   border-radius: 12px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .table {
@@ -50,7 +50,7 @@
 
   th,
   td {
-    padding: 16px 24px;
+    padding: 12px 14px;
     text-align: left;
     font-weight: 500;
   }
